--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   pull_to_refresh: ^1.6.0
   flutter_datetime_picker: ^1.3.8
   day_night_time_picker: ^0.1.3+3
+  font_awesome_flutter: ^8.8.1
 
 
   # The following adds the Cupertino Icons font to your application.
