--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_datetime_picker: ^1.3.8
   day_night_time_picker: ^0.1.3+3
   font_awesome_flutter: ^8.8.1
+  flutter_rounded_date_picker: ^1.0.4
+  device_preview: ^0.4.7
 
 
   # The following adds the Cupertino Icons font to your application.
