--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   
   http: ^0.12.1
   table_calendar: ^2.2.3
@@ -40,6 +42,11 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   flutter_rounded_date_picker: ^1.0.4
   device_preview: ^0.4.7
+  export_video_frame: ^0.0.5+4
+  provider: ^4.3.2
+  gallery_saver: ^2.0.1
+  flutter_cupertino_localizations: ^1.0.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
